<resources>
    <string name="app_name">MobAppDev-TD1</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Conversiontool">Conversion tool</string>
    <string name="Convertbutton">Convert button</string>
    <string name="Value">Value</string>
    <string name="ResultView">Value</string>
    <string name="about_us">About us</string>
    <string name="logs">Logs</string>
    <string name="Currency">Choose a new currency!  1€ is equivalent to : </string>


    <string-array name="moneys">
        <item>Yen</item>
        <item>Dollar</item>
        <item>Peso</item>
    </string-array>

    <string name="NewMoneyValue">0.00</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_activity_label">Settings Activity</string>
    <string name="button_change_currency">Change currency</string>
    <string name="button_navig_settings_to_firstPage">Back</string>
    <string name="CurrentValue">Back</string>


    <string name="dollar">1.21</string>
    <string name="peso">23.92</string>
    <string name="yen">125.57</string>

</resources>